fix: card image overflow

--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -4,4 +4,5 @@
   object-position: bottom;
   object-fit: cover;
   display: block;
+  aspect-ratio: 1/1;
 }
